[package]
name = "puan-eval"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "puan-eval"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10.2"
prost = "0.12.3"
tokio-stream = { version = "0.1.14", features = ["full"] }

[build-dependencies]
tonic-build = "0.10.2"
